@@ -4,9 +4,10 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.json.JSONArray;
+import org.json.JSONObject;
 
 import java.io.*;
-import java.sql.Connection;
 import java.util.*;
 
 
@@ -15,6 +16,7 @@ public class ExcelService {
 
     private ConfigLoader configLoader = ConfigLoader.getInstance();
     String excelFilePath = configLoader.getExcelFilePath();
+    boolean dbDataUsageFlag = configLoader.isDbDataUsageFlag();
 
     public String resultFolderPath;
 
@@ -40,9 +42,9 @@ public class ExcelService {
         jsonFiles = files;
 
         if (jsonFiles.length == 0) {
-            log.info("폴더에 JSON 파일이 존재하지 않습니다");
+            log.info("폴더 내 JSON 파일 목록 저장 실패 - JSON 파일 없음");
         } else {
-            log.info("폴더에서 JSON 파일을 읽어 왔습니다");
+            log.info("폴더 내 JSON 파일 목록 저장 완료");
         }
 
     }
@@ -59,7 +61,7 @@ public class ExcelService {
                 Sheet sheet = workbook.getSheetAt(i);
                 List<List<String[]>> sheetData = new ArrayList<>();
 
-                log.info("읽어온 시트: {} --- ", sheet.getSheetName());
+                log.info("시트명: {}", sheet.getSheetName());
 
                 int maxColumns = 0;
                 for (Row row : sheet) {
@@ -71,6 +73,7 @@ public class ExcelService {
                 // 단어 리스트가 있는 열을 반복
                 for (int col = 0; col < maxColumns; col+=2) {
                     List<String[]> columnData = new ArrayList<>();
+                    boolean isFirstIteration = true;
 
                     // 각 단어와 가중치 값을 가져와 배열로 함께 저장
                     for (Row row : sheet) {
@@ -81,20 +84,27 @@ public class ExcelService {
                             value[0] = cell.toString();
                             value[1] = row.getCell(col+1).toString();
                             columnData.add(value);
-                            log.info("엑셀 파일에서 단어 읽어오는 중: {}, {}", value[0], value[1]);
+
+                            if (isFirstIteration) {
+                                log.info("H: {}, {}", value[0], value[1]);
+                                isFirstIteration = false;
+                            } else {
+                                log.info("W: {}, {}", value[0], value[1]);
+                            }
                         }
                     }
                     if (!columnData.isEmpty()) {
                         sheetData.add(columnData);
                     }
                 }
+
                 excelData.put(sheet.getSheetName(), sheetData);
             }
 
-            log.info("엑셀에서 단어 리스트를 성공적으로 가져왔습니다");
+            log.info("엑셀 단어 리스트 추출 완료");
 
         } catch (IOException e) {
-            log.error("엑셀에서 단어 리스트를 가져오지 못했습니다: {}", e.getStackTrace()[0]);
+            log.error("엑셀 단어 리스트 추출 실패: {}", e.getStackTrace()[0]);
         }
 
         // 엑셀 데이터 출력 (테스트용)
@@ -149,7 +159,7 @@ public class ExcelService {
             try {
                 createExcel(saveFilePath);
             } catch (IOException e) {
-                log.error("엑셀 파일 생성에 실패했습니다: {}", e.getStackTrace()[0]);
+                log.error("엑셀 파일 생성 실패: {}", e.getStackTrace()[0]);
             }
             cnt++;
         }
@@ -160,8 +170,8 @@ public class ExcelService {
         List<List<String[]>> targetSheetData = excelData.get(jsonLocale);
 
         if (targetSheetData == null) {
-            log.info("일치하는 시트(국가)가 없습니다.");
-            return;
+            // 일치하는 시트가 없을 경우
+            log.info("일치 시트(국가) 없음");
         }
 
         int maxMatches = 0;
@@ -182,7 +192,7 @@ public class ExcelService {
             int matches = 0;
             List<String> matchingValues = new ArrayList<>();
 
-            matchingValues.add(columnData.get(0)[0]);
+            matchingValues.add(columnData.getFirst()[0]);
 
             int cnt = 0;
             for (int i = 1; i < columnData.size(); i++) {
@@ -191,7 +201,7 @@ public class ExcelService {
                     try {
                         addWeight += Double.parseDouble(columnData.get(i)[1]);
                     } catch (Exception e) {
-                        log.error("가중치 합계를 구하는 중 오류가 발생했습니다: {}", e.getStackTrace()[0]);
+                        log.error("가중치 계산 실패: {}", e.getStackTrace()[0]);
                     }
 
                     matches++;
@@ -200,14 +210,16 @@ public class ExcelService {
                 } else {
                     cnt = 0;
                 }
+                log.info("'{}' - 일치 횟수: {}, 가중치: {}", value, cnt, Double.parseDouble(columnData.get(i)[1]));
             }
 
-            log.info("{} / {} = {}", addWeight, matches, addWeight / matches);
-            double weight = Math.round(addWeight / matches);
+            //log.info("{} / {} = {}", addWeight, matches, addWeight / matches);
+            double weight = (double) Math.round(addWeight / matches * 10) / 10;
 
-            log.info("'{}' 양식 매치된 단어 수: {}/{}", columnData.get(0)[0], matches, columnData.size() - 1);
-            log.info("'{}' 양식 가중치 평균 값: {}", columnData.get(0)[0], weight);
-            log.info("'{}' 양식 매치 결과: {}", columnData.get(0)[0], matchingValues.subList(1, matchingValues.size()));
+            log.info("'{}' 양식 - 매치된 단어 수: {}/{}", columnData.get(0)[0], matches, columnData.size() - 1);
+            log.info("'{}' 양식 - 가중치 평균 값: {}", columnData.get(0)[0], weight);
+            log.info("'{}' 양식 - 매치 결과: {}", columnData.get(0)[0], matchingValues.subList(1, matchingValues.size()));
+
 
             matchingValues.add(matches + ""); // 매치 단어 수 결과 리스트에 추가
             resultWord.add(matchingValues);
@@ -224,17 +236,19 @@ public class ExcelService {
         }
 
         if (matchIndex == weightIndex) {
-            log.info("단어 매치 결과와 가중치 비교 결과가 일치합니다");
+            log.info("단어 매치 결과와 가중치 비교 결과 일치");
         } else {
-            log.info("단어 매치 결과와 가중치 비교 결과가 일치하지 않습니다");
+            log.info("단어 매치 결과와 가중치 비교 결과 불일치");
         }
+
+        log.info("문서 분류 결과: 국가코드({}), 문서양식({}), 가중치({})", jsonLocale, targetSheetData.get(matchIndex).get(0)[0], maxWeight);
 
         List<String> countryType = new ArrayList<>();
         countryType.add("국가");
         countryType.add(jsonLocale);
         resultList.add(countryType);
 
-//        List<String> documentType = new ArrayList<>();
+        List<String> documentType = new ArrayList<>();
         documentType.add("문서 양식");
 
         if (matchIndex == -1 || weightIndex == -1) {
@@ -251,7 +265,6 @@ public class ExcelService {
 
 
     }
-
     //</editor-fold>
 
     // 단어 카운트
@@ -308,7 +321,7 @@ public class ExcelService {
 
         try (FileOutputStream fileOut = new FileOutputStream(saveFilePath)) {
             workbook.write(fileOut);
-            log.info("엑셀 파일이 성공적으로 생성되었습니다: {} ", saveFilePath);
+            log.info("엑셀 파일 생성 완료: {} ", saveFilePath);
         }
         workbook.close();
     }
